<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="top">
        <Button
            android:id="@+id/bindButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bindText" />

        <Button
            android:id="@+id/unbindButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/unbindText"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="top">
        <Button
            android:id="@+id/showAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showAllText"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:gravity="top">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/songPromptText"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/songInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/songPromptText" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showOneText" />
    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "4"/>



</LinearLayout>